[package]
name = "hekit"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shlex = "1"
glob = "0.3"
regex = "1"
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
webbrowser = "0.8"

[build-dependencies]
winres = "0.1"

[package.metadata.windows]
icon = "assets/hekit.ico"