[package]
name = "hekit"
version = "1.2.0"
authors = ["zhanghed"]
description = "一个简单实用的命令行工具集合"
homepage = "https://gitee.com/zhanghed/hekit"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shlex = "1"
glob = "0.3"
regex = "1"
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
winapi = { version = "0.3", features = ["wincon", "winuser"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.winres]
icon = "src/assets/hekit.ico"

[build-dependencies]
winres = "0.1"