[package]
name = "hekit"
version = "1.3.0"
authors = ["zhanghed"]
description = "HEKIT - 多功能工具集合"
homepage = "https://gitee.com/zhanghed/hekit"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shlex = "1"
glob = "0.3"
regex = "1"
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
winapi = { version = "0.3", features = ["wincon", "winuser"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
sysinfo = "0.29"
socket2 = "0.5"
hostname = "0.3"

[package.metadata.winres]
icon = "src/assets/hekit.ico"

[build-dependencies]
winres = "0.1"